# GGJ2018-ToTheMoon

./: .gitignore  CMakeLists.txt  GGJ2018.project  LICENCE  README.md
cmake/Modules/: FindShSDK.cmake
src/: CMakeLists.txt
src/Extension/: CMakeLists.txt  Extension.cpp  Extension.h  GGJ2018.configext
src/Game/: CMakeLists.txt  Game.cpp  Game.h  Game.inl  InputManager.cpp  InputManager.h  PersistentData.cpp  PersistentData.h  application.cpp  application.h  inputs.cpp  inputs.h  main.cpp
src/Game/GameStates/: GameState.cpp  GameState.h  GameStateGame.cpp  GameStateGame.h  GameStateMainMenu.cpp  GameStateMainMenu.h  GameStateShipSelection.cpp  GameStateShipSelection.h
src/Network/: CMakeLists.txt  Network.h  NetworkHelper.cpp  NetworkHelper.h  Ship.cpp  Ship.h  Transmitter.cpp  Transmitter.h  World.cpp  World.h  WorldListener.h  test.cpp  utils.h
src/Plugin/: CMakeLists.txt  Plugin.cpp  Plugin.h  PluginFactory.cpp  PluginFactory.h  Ship.cpp  Ship.h
src/Plugin/Animation/: AnimatedSpriteManager.cpp  AnimatedSpriteManager.h
src/Plugin/Sound/: SoundManager.cpp  SoundManager.h
src/Plugin/World/: World.cpp  World.h
src/Plugin/World/Camera/: CameraPlugin.cpp  CameraPlugin.h
src/Plugin/World/GameObjects/: GameObject.cpp  GameObject.h
src/Plugin/World/GameObjects/Explosion/: Explosion.cpp  Explosion.h  ExplosionManager.cpp  ExplosionManager.h
src/Plugin/World/GameObjects/Planet/: Planet.cpp  Planet.h
src/Plugin/World/GameObjects/Projectile/: Projectile.cpp  Projectile.h  ProjectileManager.cpp
src/Plugin/World/GameObjects/Projectile/Bullet/: Bullet.h
src/Plugin/World/GameObjects/Ship/: Ship.cpp  Ship.h
src/Plugin/World/GameObjects/Transmiter/: Transmiter.cpp  Transmiter.h
src/Plugin/World/GameObjects/Transmitter/: Transmitter.cpp  Transmitter.h
src/Plugin/World/GameObjects/projectile/: Projectile.cpp  Projectile.h  ProjectileManager.cpp  ProjectileManager.h
src/Plugin/World/GameObjects/projectile/Bullet/: Bullet.cpp  Bullet.h
src/Plugin/World/Inputs/: InputManager.cpp  InputManager.h
src/Plugin/World/MiniMap/: MiniMap.cpp  MiniMap.h
src/Plugin/World/Team/: Team.cpp  Team.h
